fix: replace Stream.toList() with Collectors.toList() for Java 8 compatibility